--- a/src/rechargeRecord.html
+++ b/src/rechargeRecord.html
@@ -28,17 +28,61 @@
 			<button class="del-msg">删除</button>
 		</div>
 		<ul class="record-list">
-			<li class="r-item selected">
+			<!-- 待付款 -->
+			<li class="r-item  selected">
 				<input class="yg-checkbox" type="checkbox">
-				<div class="rec-wrap">
-					<div class="top"><span class="sn">单号：23423435</span><span class="status ">待付款</span></div>
+				<div class="rec-wrap unpaid">
+					<div class="top"><span class="sn">单号：23423435</span><span class="status">待付款</span></div>
 					<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
 					<div class="text"><span class="label">充值银行</span><span>中国建设银行</span></div>
 					<div class="text bottom"><span class="label">2018-08-28 12:00:21</span><a class="go-detail" href="">查看详情 ></a></div>
 				</div>
 			</li>
+			<!-- 处理中 -->
+			<li class="r-item">
+				<input class="yg-checkbox" type="checkbox">
+				<div class="rec-wrap Processing">
+					<div class="top"><span class="sn">单号：23423435</span><span class="status">处理中</span></div>
+					<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
+					<div class="text"><span class="label">充值银行</span><span>中国建设银行</span></div>
+					<div class="text bottom"><span class="label">2018-08-28 12:00:21</span><button>取消</button></div>
+				</div>
+			</li>
+			<!-- 已完成 -->
+			<li class="r-item">
+				<input class="yg-checkbox" type="checkbox">
+				<div class="rec-wrap completed">
+					<div class="top"><span class="sn">单号：23423435</span><span class="status">已完成</span></div>
+					<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
+					<div class="text"><span class="label">充值银行</span><span>中国建设银行</span></div>
+					<div class="text bottom"><span class="label">2018-08-28 12:00:21</span><button>删除</button></div>
+				</div>
+			</li>
+			<!-- 未通过 -->
+			<li class="r-item">
+				<input class="yg-checkbox" type="checkbox">
+				<div class="rec-wrap  notpass">
+					<div class="top"><span class="sn">单号：23423435</span><span class="status">审核未通过</span></div>
+					<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
+					<div class="text"><span class="label">充值银行</span><span>中国建设银行</span></div>
+					<div class="text bottom"><span class="label">2018-08-28 12:00:21</span><button>删除</button></div>
+				</div>
+			</li>
+			<!-- 已取消 -->
+			<li class="r-item">
+				<input class="yg-checkbox" type="checkbox">
+				<div class="rec-wrap  cancelled">
+					<div class="top"><span class="sn">单号：23423435</span><span class="status">已取消</span></div>
+					<div class="time"><span class="label">充值金额</span><span>5000 USD</span></div>
+					<div class="text"><span class="label">充值银行</span><span>中国建设银行</span></div>
+					<div class="text bottom"><span class="label">2018-08-28 12:00:21</span><button>删除</button></div>
+				</div>
+			</li>
 		</ul>
+
+		@@include('include/pagination.html')
 	</div>
+	
 	@@include('include/footer.html')
 	@@include('include/siteTool.html')
 
